--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5"
   }
 }
